<resources>
    <string name="app_name">TwitterViewer</string>
    <string name="key_id">ID</string>


    <!-- Item detail activity -->
    <string name="item_detail_date">"Uploaded on"</string>
    <string name="item_detail_owner">"Owner"</string>
    <string name="item_detail_description">"Description"</string>
    <string name="item_detail_views">"Views"</string>
    <string name="item_detail_tags">"Tags"</string>
    <string name="app_label">no seee</string>
    <string name="search_hint">Search</string>

</resources>
