<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ItemDetailActivity">

    <android.support.design.widget.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/spacing_normal"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetEnd="@dimen/spacing_big"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:padding="@dimen/spacing_normal">

            <TextView
                style="@style/text_item_detail_title"
                android:text="@string/item_detail_date"/>

            <TextView
                android:id="@+id/text_view_uploaded_on"
                style="@style/text_item_detail_value"
                tools:text="@string/item_detail_date"/>

            <TextView
                style="@style/text_item_detail_title"
                android:text="@string/item_detail_owner"/>

            <TextView
                android:id="@+id/text_item_detail_owner"
                style="@style/text_item_detail_value"
                tools:text="@string/item_detail_owner"/>

            <TextView
                style="@style/text_item_detail_title"
                android:text="@string/item_detail_description"/>

            <TextView
                android:id="@+id/text_item_detail_description"
                style="@style/text_item_detail_value"
                tools:text="@string/item_detail_description"/>

            <TextView
                style="@style/text_item_detail_title"
                android:text="@string/item_detail_views"/>

            <TextView
                android:id="@+id/text_item_detail_views"
                style="@style/text_item_detail_value"
                tools:text="@string/item_detail_views"/>

            <TextView
                style="@style/text_item_detail_title"
                android:text="@string/item_detail_tags"/>

            <TextView
                android:id="@+id/text_item_detail_tags"
                style="@style/text_item_detail_value"
                tools:text="@string/item_detail_tags"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>